# qml_practice

./: CMakeLists.txt  Main.qml  globals.cpp  globals.h  main.cpp
